grammar.js
    source_file: $ => seq(
      any_amount_of($._definition),
      optional("\0")
    ),

    _definition: $ => seq(
      $._statement,
    ),

    sub_start: () => /sub/i,

    sub_statement: $ => alias($._sub_statement, 'function_declaration'),

    _sub_statement: $ => seq(
      repeat($.decorator),
      seq($.sub_start, /\s*/, field("name", $.identifier)),
      $.sub_impl
    ),

    _statement: $ => prec.right(1, choice(
      $.function_declaration,  // BrighterScript function/sub declaration
      $.sub_statement,  // Legacy BrightScript
      $.function_statement,  // Legacy BrightScript
      $.library_statement,
      $.constant,
      $.const_declaration,
      $.class_declaration,
      $.interface_declaration,
      $.namespace_declaration,
      $.enum_declaration,
      $.import_declaration,
      $.if_statement,
      $.conditional_compl,
      $.while_statement,
      $.for_statement,
      $.try_statement,
      $._single_line_statement,
      // $.expression_statement,
    )),

    _expression: $ => choice(
      $.call_expression,
      $.member_expression,
      $.array_access_expression,
      $.identifier,
      $.prefix_exp,
      $.string,
      $.number,
      $.literal,
      $.binary_expression,
      $.unary_expression,
      $.annonymous_sub,
      $.annonymous_function,
      $.source_literal,
      $.template_string,
      $.regex,
      $.ternary_expression,
      $.super
    ),

    if_statement: $ =>
      choice(
        $.multi_line_if,
        $.single_line_if,
      ),

    multi_line_if: $ => seq(
      alias(/if/i, $.if_start),
      $._expression,
      optional(alias(/then/i, $.then)),
      $.if_block,
    ),

    if_block: $ => seq(
      $._new_line,
      repeat($._statement),
      repeat($.else_if_clause),
      optional($.else_clause),
      $.end_statement
    ),

    return_statement: $ => prec.right(PREC.RETURN, seq(
      /return/i,
      optional($._expression)
    )),

    assignment_statement: $ => prec(PREC.ASSIGNMENT, seq(
      field('left', $._var),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '\\=', '<<=', '>>=')),
      field('right', $._expression)
    )),

    print_statement: $ => seq(
      alias(choice(/print/i, '?'), $.print),
      field('arguments', seq($._expression, repeat(seq(choice(',', ';'), $._expression)))),
    ),

    block: $ => repeat1(
      $._statement
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')'
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('=', $._expression)),
      optional(
        field('type', $.type_annotation)
      )
    ),

    type_annotation: $ => seq(
      /as/i,
      $.type_identifier
    ),

    _var: ($) =>
      choice(
        $.identifier,
        $.member_expression,
        $.array_access_expression
      ),

    // Expressions
    call_expression: $ => prec(15,seq(
      field('function', choice(
        $.identifier,
        $.property_access_expression,
        $.member_expression
      )),
      field('arguments', $.arguments)
    )),

    binary_expression: $ => choice(
      prec.left(PREC.LOGICAL, seq(field('left', $._expression), field('operator', $.and), field('right', $._expression))),
      prec.left(PREC.LOGICAL, seq(field('left', $._expression), field('operator', $.or),  field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.equals),   field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.not_equals),  field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.less_than),   field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.less_than_or_equal),  field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.greater_than),   field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.greater_than_or_equal),  field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.null_coalescing),  field('right', $._expression))),
      prec.left(PREC.ADDITIVE, seq(field('left', $._expression), field('operator', $.plus), field('right', $._expression))),
      prec.left(PREC.ADDITIVE, seq(field('left', $._expression), field('operator', $.minus), field('right', $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field('left', $._expression), field('operator', $.multiply),  field('right', $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field('left', $._expression), field('operator', $.divide),  field('right', $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field('left', $._expression), field('operator', $.backslash),  field('right', $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field('left', $._expression), field('operator', $.mod), field('right', $._expression)))
    ),

    arguments: $ => seq(
      '(',
      commaSep($._expression),
      ')'
    ),

    property_access_expression: $ => prec.left(2, seq(
      field('object', choice(
        $.identifier,
        $.property_access_expression,
        $.call_expression,
        $.array_access_expression
      )),
      choice('.', '?.'),
      field('property', choice(
        $.identifier,
        $.call_expression,
        $.array_access_expression
      ))
    )),

    // Member expression (for class member access like m.name or super.method())
    member_expression: $ => prec.left(3, seq(
      field('object', choice(
        $.identifier,
        $.super,
        $.member_expression
      )),
      '.',
      field('property', $.property_identifier)
    )),

    array_access_expression: $ => prec(1, seq(
      field('array', choice(
        $.identifier,
        $.array_access_expression,
        $.property_access_expression,
        $.call_expression
      )),
      '[',
      field('index', $._expression),
      ']'
    )),

    literal: $ => choice(
      $.invalid,
      $.boolean,
      $.array,
      $.assoc_array
    ),

    boolean: $ => choice(
      /true/i,
      /false/i
    ),

    number: $ => /-?\d+(\.\d+)?/,

    string: $ => seq(
      '"',
      repeat(choice(
        alias(/[^"]+/, $.string_content),
        alias(seq('""'), $.escaped_quote)
      )),
      '"'
    ),

    invalid: $ => /invalid/i,

    array: $ => seq(
      '[',
      optional(commaSep($._expression)),
      ']'
    ),

    assoc_array: $ => seq(
      '{',
        optional(commaSepNewLine($.assoc_array_element)),
      '}'
    ),

    assoc_array_element: $ => seq(
      field('key', choice(
        $.identifier,
        $.string
      )),
      ':',
      field('value', $._expression)
    ),

    plus: $ => '+',
    minus: $ => '-',
    multiply: $ => '*',
    equals: $ => '=',
    greater_than: $ => '>',
    decorator: $ => seq(
      '@',
      field('name', $.identifier),
      optional(field('arguments', $.arguments))
    ),

    // Class declarations
    class_declaration: $ => prec.right(seq(
      repeat($.decorator),
      /class/i,
      field('name', $.identifier),
      optional(field('superclass', $.extends_clause)),
      field('body', $.class_body),
      /end\s+class/i
    )),

    class_body: $ => choice(
      repeat1(choice(
        $.field_declaration,
        $.method_definition
      )),
      // Empty class body - use external token
      $._empty
    ),

    extends_clause: $ => seq(
      /extends/i,
      $.type_identifier
    ),

    field_declaration: $ => seq(
      optional(choice(
        $.accessibility_modifier,
        $.static_modifier,
        $.override_modifier
      )),
      field('name', $.identifier),
      field('type', $.type_annotation)
    ),

    method_definition: $ => seq(
      optional(choice(
        $.accessibility_modifier,
        $.static_modifier,
        $.override_modifier
      )),
      choice(/function/i, /sub/i),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('return_type', $.type_annotation)),
      field('body', $.statement_block),
      /end\s+(function|sub)/i
    ),

    statement_block: $ => repeat1($._statement),

    accessibility_modifier: $ => choice(
      /public/i,
      /private/i,
      /protected/i
    ),

    static_modifier: $ => /static/i,
    override_modifier: $ => /override/i,

    // Interface declarations
    function_declaration: $ => seq(
      repeat($.decorator),
      choice(/function/i, /sub/i),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('return_type', $.type_annotation)),
      field('body', $.statement_block),
      /end\s+(function|sub)/i
    ),

    // Type annotations
    type_annotation: $ => seq(
      /as/i,
      $.type_identifier
    ),

    type_identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/)),
    property_identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/)),

    // Super keyword for inheritance
    end_sub: $ => /end\s+sub/i,
    end_if: $ => /end\s+if/i,
    end_statement: $ => choice(
      $.end_sub,
      $.end_function,
      $.end_if,
      $.conditional_compl_end_if,
      $.end_for,
      $.end_while,
      $.end_try
    ),

    _new_line: $ => /\r?\n/,

    // Source literals for introspection
    identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/))
  }
});

function commaSep(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          ',',
          rule
        )
      )
    )
  )
}

function commaSepNewLine(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          optional(','),
          rule
        )
      )
    )
  )
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function any_amount_of() {
  return repeat(seq(...arguments));
}

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
