test/corpus/arrays.txt
==================
array test 1
==================

sub TestEmptyArray()
    emptyArray = []
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array))))
      (end_statement
        (end_sub))))

==================
array test 2
==================

sub TestArrayWithElements()
    myArray = [1, 2, 3, 4, 5]
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (number)
              (number)
              (number)
              (number)
              (number)))))
      (end_statement
        (end_sub))))

==================
array test 3
==================

sub TestArrayElementAccess()
    myArray = [1, 2, 3, 4, 5]
    print myArray[1]
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (number)
              (number)
              (number)
              (number)
              (number))))
        (print_statement
          (print)
          (array_access_expression
            (identifier)
            (number))))
      (end_statement
        (end_sub))))

==================
array test 4
==================

sub TestArrayElementModification()
    myArray = [1, 2, 3, 4, 5]
    myArray[1] = 10
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (number)
              (number)
              (number)
              (number)
              (number))))
        (assignment_statement
          (array_access_expression
            (identifier)
            (number))
          (number)))
      (end_statement
        (end_sub))))

==================
array test 5
==================

sub TestMixedTypeArray()
    mixedArray = ["hello", 42, true, 3.14]
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (string
                (string_content))
              (number)
              (literal
                (boolean))
              (number)))))
      (end_statement
        (end_sub))))

==================
array test 6
==================

sub TestArrayWithExpressions()
    expressionArray = [1 + 2, 3 * 4, 5 - 1]
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (binary_expression
                (number)
                (plus)
                (number))
              (binary_expression
                (number)
                (multiply)
                (number))
              (binary_expression
                (number)
                (minus)
                (number))))))
      (end_statement
        (end_sub))))

==================
array test 7
==================

sub TestNestedArrays()
    nestedArray = [[1, 2], [3, 4], [5, 6]]
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (literal
                (array
                  (number)
                  (number)))
              (literal
                (array
                  (number)
                  (number)))
              (literal
                (array
                  (number)
                  (number)))))))
      (end_statement
        (end_sub))))

==================
array test 8
==================

sub TestArrayWithFunctionCalls()
    functionArray = [Upper("hello"), Len("world")]
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (call_expression
                (identifier)
                (arguments
                  (string
                    (string_content))))
              (call_expression
                (identifier)
                (arguments
                  (string
                    (string_content))))))))
      (end_statement
        (end_sub))))

==================
array test 9
==================

sub TestArrayAssignment()
    myArray = [1, 2, 3, 4, 5]
    assignedArray = myArray
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (number)
              (number)
              (number)
              (number)
              (number))))
        (assignment_statement
          (identifier)
          (identifier)))
      (end_statement
        (end_sub))))

==================
array test 10
==================

sub TestArrayAsArgument()
    myArray = [1, 2, 3, 4, 5]
    PrintArray(myArray)
end sub

sub PrintArray(arr)
    print arr
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (array
              (number)
              (number)
              (number)
              (number)
              (number))))
        (call_expression
          (identifier)
          (arguments
            (identifier))))
      (end_statement
        (end_sub)))
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list
        (parameter
          (identifier)))
      (block
        (print_statement
          (print)
          (identifier)))
      (end_statement
        (end_sub))))

==================
property access array
==================

sub init()
    if test[3].ads[3] = "test" then
    end if
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (if_statement
          (multi_line_if
            (if_start)
            (binary_expression
              (array_access_expression
                (property_access_expression
                  (array_access_expression
                    (identifier)
                    (number))
                  (identifier))
                (number))
              (equals)
              (string
                (string_content)))
            (then)
            (if_block
              (end_statement
                (end_if))))))
      (end_statement
        (end_sub))))
