test/corpus/assoc_arrays.txt
==================
assocarray test 1
==================

sub TestEmptyAssocArray()
    emptyAssocArray = {}
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (assoc_array))))
      (end_statement
        (end_sub))))

==================
assocarray test 2
==================

sub TestAssocArrayWithElements()
    person = {
        "name": "John",
        "age": 30,
        "city": "New York"
    }
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (assoc_array
              (assoc_array_element
                (string
                  (string_content))
                (string
                  (string_content)))
              (assoc_array_element
                (string
                  (string_content))
                (number))
              (assoc_array_element
                (string
                  (string_content))
                (string
                  (string_content)))))))
      (end_statement
        (end_sub))))

==================
assocarray test 3
==================

sub TestAssocArrayElementAccess()
    person = {
        "name": "John",
        "age": 30,
        "city": "New York"
    }
    print person.name
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (assoc_array
              (assoc_array_element
                (string
                  (string_content))
                (string
                  (string_content)))
              (assoc_array_element
                (string
                  (string_content))
                (number))
              (assoc_array_element
                (string
                  (string_content))
                (string
                  (string_content))))))
        (print_statement
          (print)
          (member_expression
            (identifier)
            (property_identifier))))
      (end_statement
        (end_sub))))

==================
assocarray test 4
==================

sub TestAssocArrayElementModification()
    person = {
        "name": "John",
        "age": 30,
        "city": "New York"
    }
    person.age = 31
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (assoc_array
              (assoc_array_element
                (string
                  (string_content))
                (string
                  (string_content)))
              (assoc_array_element
                (string
                  (string_content))
                (number))
              (assoc_array_element
                (string
                  (string_content))
                (string
                  (string_content))))))
        (assignment_statement
          (member_expression
            (identifier)
            (property_identifier))
          (number)))
      (end_statement
        (end_sub))))

==================
assocarray test 5
==================

sub TestAssocArrayWithExpressions()
    values = {
        "sum": 10 + 20,
        "product": 5 * 6
    }
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (assoc_array
              (assoc_array_element
                (string
                  (string_content))
                (binary_expression
                  (number)
                  (plus)
                  (number)))
              (assoc_array_element
                (string
                  (string_content))
                (binary_expression
                  (number)
                  (multiply)
                  (number)))))))
      (end_statement
        (end_sub))))

==================
assocarray no comma
==================

sub TestAssocArrayWithElements()
    person = {
        "name": "John"
        "age": 30
        "city": invalid
    }
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (assoc_array
              (assoc_array_element
                (string
                  (string_content))
                (string
                  (string_content)))
              (assoc_array_element
                (string
                  (string_content))
                (number))
              (assoc_array_element
                (string
                  (string_content))
                (literal
                  (invalid)))))))
      (end_statement
        (end_sub))))

==================
assocarray no comma and identifier left side
==================

sub TestAssocArrayWithElements()
    person = {
        name: "John"
        "age": 30
        "city": invalid
    }
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (literal
            (assoc_array
              (assoc_array_element
                (identifier)
                (string
                  (string_content)))
              (assoc_array_element
                (string
                  (string_content))
                (number))
              (assoc_array_element
                (string
                  (string_content))
                (literal
                  (invalid)))))))
      (end_statement
        (end_sub))))
