test/corpus/classes.txt
==================
Basic class declaration
==================

class Person
    name as string
    age as integer
    
    sub new()
        m.name = "Unknown"
        m.age = 0
    end sub
    
    function getName() as string
        return m.name
    end function
end class
---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (field_declaration
        (identifier)
        (type_annotation
          (type_identifier)))
      (field_declaration
        (identifier)
        (type_annotation
          (type_identifier)))
      (method_definition
        (identifier)
        (parameter_list)
        (statement_block
          (assignment_statement
            (member_expression
              (identifier)
              (property_identifier))
            (string
              (string_content)))
          (assignment_statement
            (member_expression
              (identifier)
              (property_identifier))
            (number))))
      (method_definition
        (identifier)
        (parameter_list)
        (type_annotation
          (type_identifier))
        (statement_block
          (return_statement
            (member_expression
              (identifier)
              (property_identifier))))))))

==================
Class with inheritance
==================

class Employee extends Person
    employeeId as integer
    
    sub new(id as integer)
        super.new()
        m.employeeId = id
    end sub
end class
---

(source_file
  (class_declaration
    (identifier)
    (extends_clause
      (type_identifier))
    (class_body
      (field_declaration
        (identifier)
        (type_annotation
          (type_identifier)))
      (method_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation
              (type_identifier))))
        (statement_block
          (call_expression
            (member_expression
              (identifier)
              (property_identifier))
            (arguments))
          (assignment_statement
            (member_expression
              (identifier)
              (property_identifier))
            (identifier)))))))

==================
Class with access modifiers
==================

class Account
    private balance as float
    protected accountNumber as string
    public owner as string
    
    public sub new()
        m.balance = 0.0
    end sub
    
    private function validateAmount(amount as float) as boolean
        return amount > 0
    end function
    
    public function deposit(amount as float) as void
        if m.validateAmount(amount) then
            m.balance = m.balance + amount
        end if
    end function
end class
---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (field_declaration
        (accessibility_modifier)
        (identifier)
        (type_annotation
          (type_identifier)))
      (field_declaration
        (accessibility_modifier)
        (identifier)
        (type_annotation
          (type_identifier)))
      (field_declaration
        (accessibility_modifier)
        (identifier)
        (type_annotation
          (type_identifier)))
      (method_definition
        (accessibility_modifier)
        (identifier)
        (parameter_list)
        (statement_block
          (assignment_statement
            (member_expression
              (identifier)
              (property_identifier))
            (number))))
      (method_definition
        (accessibility_modifier)
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation
              (type_identifier))))
        (type_annotation
          (type_identifier))
        (statement_block
          (return_statement
            (binary_expression
              (identifier)
              (greater_than)
              (number)))))
      (method_definition
        (accessibility_modifier)
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation
              (type_identifier))))
        (type_annotation
          (type_identifier))
        (statement_block
          (if_statement
            (multi_line_if
              (if_start)
              (call_expression
                (member_expression
                  (identifier)
                  (property_identifier))
                (arguments
                  (identifier)))
              (then)
              (if_block
                (assignment_statement
                  (member_expression
                    (identifier)
                    (property_identifier))
                  (binary_expression
                    (member_expression
                      (identifier)
                      (property_identifier))
                    (plus)
                    (identifier)))
                (end_statement
                  (end_if))))))))))

==================
Static class member
==================

class MathUtils
    static function add(a as integer, b as integer) as integer
        return a + b
    end function
end class
---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_definition
        (static_modifier)
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation
              (type_identifier)))
          (parameter
            (identifier)
            (type_annotation
              (type_identifier))))
        (type_annotation
          (type_identifier))
        (statement_block
          (return_statement
            (binary_expression
              (identifier)
              (plus)
              (identifier))))))))

==================
Override method
==================

class Shape
    function getArea() as float
        return 0.0
    end function
end class

class Circle extends Shape
    radius as float
    
    override function getArea() as float
        return 3.14159 * m.radius * m.radius
    end function
end class
---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_definition
        (identifier)
        (parameter_list)
        (type_annotation
          (type_identifier))
        (statement_block
          (return_statement
            (number))))))
  (class_declaration
    (identifier)
    (extends_clause
      (type_identifier))
    (class_body
      (field_declaration
        (identifier)
        (type_annotation
          (type_identifier)))
      (method_definition
        (override_modifier)
        (identifier)
        (parameter_list)
        (type_annotation
          (type_identifier))
        (statement_block
          (return_statement
            (binary_expression
              (binary_expression
                (number)
                (multiply)
                (member_expression
                  (identifier)
                  (property_identifier)))
              (multiply)
              (member_expression
                (identifier)
                (property_identifier)))))))))

==================
Multiple classes in file
==================

class Point
    x as integer
    y as integer
end class

class Rectangle
    topLeft as Point
    bottomRight as Point
end class
---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (field_declaration
        (identifier)
        (type_annotation
          (type_identifier)))
      (field_declaration
        (identifier)
        (type_annotation
          (type_identifier)))))
  (class_declaration
    (identifier)
    (class_body
      (field_declaration
        (identifier)
        (type_annotation
          (type_identifier)))
      (field_declaration
        (identifier)
        (type_annotation
          (type_identifier))))))
